--- a/css/styles.css
+++ b/css/styles.css
@@ -1,25 +1,42 @@
 * {
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 18px;
     color: antiquewhite;
     font-family: Consolas, monospace;
 }
-html {
-    scroll-behavior: smooth;    
+
+footer {
+    flex-shrink: 0;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.35);
+    width: auto;
+    text-align: center;
+    padding: 1%;
+    bottom: auto;
+    margin-top: auto;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+div {
+    flex: content;
+}
+
 body {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: left;
-    min-height: 100vh;
     margin: 0;
     background-image: linear-gradient(to right, #444, #101010);
 }
+
 main {
-    flex: 1;
     width: auto;
     margin: 24px;
+    min-height: 100vh;
 }
 
 p,
@@ -66,7 +83,6 @@ nav ul {
 
 a:link,
 a:visited {
-    color: white;
     text-decoration: none;
 }
 
@@ -76,46 +92,18 @@ a:active {
     text-decoration: underline;
 }
 
-p {
-    font-size: 16px;
-}
-
-footer {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.35);
-    width: auto;
-    text-align: center;
-    padding: 1%;
-}
+/* footer */
 
 .hide {
     display: none;
 }
 
-@media (max-width: 1920px) {
+@media screen and (max-width: 480px) {
     .hide {
         display: block;
     }
 
     .page-content {
         display: none;
-    }
-}
-
-@media (min-width: 1921px) {
-    .hide {
-        display: none;
-    }
-
-    .page-content {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: left;
-        min-height: 100vh;
-        margin-top: 12px;
-        margin-bottom: 0;
-        margin-inline: 0;
-        background-image: linear-gradient(to right, #444, #101010);
     }
 }
